--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^1.11.0
   firebase_auth: ^3.3.5
   cloud_firestore: ^3.1.6
+  cloud_functions: ^3.2.5
   firebase_storage: ^10.2.5
   agora_uikit: ^0.0.4
   firebase_database: ^9.0.5
