--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_storage: ^10.2.5
   agora_uikit: ^0.0.4
   firebase_database: ^9.0.6
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_lints: ^1.0.0
@@ -48,6 +49,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - .env
     - assets/images/
     - assets/icons/
     - assets/animations/
