--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   open_file: ^3.2.1
   flutter_firebase_chat_core:
     git: https://github.com/amsyary/flutter_firebase_chat_core.git
+  jiffy: ^5.0.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
