--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_firebase_chat_core:
     git: https://github.com/amsyary/flutter_firebase_chat_core.git
   jiffy: ^5.0.0
+  flutter_local_notifications: ^9.4.0
+  firebase_messaging: ^11.2.10
 
 dev_dependencies:
   flutter_lints: ^1.0.0
