--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bernsoft.daktaricalldoctor">
+    package="com.dancingwhale.hallo_doctor_doctor_app">
    <application
         android:label="DaktariCall"
         android:name="${applicationName}"
