--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   jiffy: ^5.0.0
   flutter_local_notifications: ^9.4.0
   firebase_messaging: ^11.2.10
+  dropdown_search: ^2.0.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
