--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   flutter_local_notifications: ^9.4.0
   firebase_messaging: ^11.2.10
   dropdown_search: ^2.0.1
+  json_serializable: ^6.1.5
+  json_annotation: ^4.4.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
@@ -57,6 +59,7 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.9.2
   change_app_package_name: ^1.0.0
+  build_runner: ^2.1.8
 
 flutter:
   uses-material-design: true
