--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,6 @@ dependencies:
   cloud_firestore: ^3.1.6
   cloud_functions: ^3.2.5
   firebase_storage: ^10.2.5
-  agora_uikit: ^0.0.4
   firebase_database: ^9.0.6
   flutter_dotenv: ^5.0.2
   flutter_chat_ui:
@@ -51,6 +50,8 @@ dependencies:
   dropdown_search: ^2.0.1
   json_serializable: ^6.1.5
   json_annotation: ^4.4.0
+  agora_rtc_engine: ^5.1.0
+  permission_handler: ^9.2.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
