--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   json_annotation: ^4.4.0
   agora_rtc_engine: ^5.1.0
   permission_handler: ^9.2.0
+  image_cropper: ^2.0.3
 
 dev_dependencies:
   flutter_lints: ^1.0.0
