--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,13 @@ dependencies:
   date_count_down:
   flutter_rating_bar: ^4.0.1
   package_info_plus: ^1.3.0
-  firebase_core: ^1.11.0
-  firebase_auth: ^3.3.5
-  cloud_firestore: ^3.1.6
-  cloud_functions: ^3.2.5
-  firebase_storage: ^10.2.5
-  firebase_database: ^9.0.6
+  firebase_core: 2.2.0
+  firebase_auth: 4.1.0
+  cloud_firestore: 4.0.3
+  cloud_functions: 4.0.3
+  firebase_storage: 11.0.3
+  firebase_database: 10.0.5
+  firebase_messaging: 14.1.0
   flutter_dotenv: ^5.0.2
   flutter_chat_ui:
     git: https://github.com/amsyary/flutter_chat_ui.git
@@ -46,7 +47,6 @@ dependencies:
     git: https://github.com/amsyary/flutter_firebase_chat_core.git
   jiffy: ^5.0.0
   flutter_local_notifications: ^9.4.0
-  firebase_messaging: ^11.2.10
   dropdown_search: ^2.0.1
   json_serializable: ^6.1.5
   json_annotation: ^4.4.0
