--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,9 @@ dependencies:
   date_count_down:
   flutter_rating_bar: ^4.0.1
   package_info_plus: ^1.3.0
-  firebase_core: 2.2.0
+  firebase_core: ^2.3.0
   firebase_auth: 4.1.0
-  cloud_firestore: 4.0.3
+  cloud_firestore: ^4.1.0
   cloud_functions: 4.0.3
   firebase_storage: 11.0.3
   firebase_database: 10.0.5
