--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,12 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   package_info_plus: ^1.3.0
   firebase_core: ^2.3.0
-  firebase_auth: 4.1.0
+  firebase_auth: ^4.1.0
   cloud_firestore: ^4.1.0
-  cloud_functions: 4.0.3
-  firebase_storage: 11.0.3
-  firebase_database: 10.0.5
-  firebase_messaging: 14.1.0
+  cloud_functions: ^4.0.7
+  firebase_storage: ^11.0.10
+  firebase_database: ^10.0.9
+  firebase_messaging: ^14.2.1
   flutter_dotenv: ^5.0.2
   flutter_chat_ui:
     git: https://github.com/amsyary/flutter_chat_ui.git
@@ -44,7 +44,9 @@ dependencies:
   mime: ^1.0.1
   open_file: ^3.2.1
   flutter_firebase_chat_core:
-    git: https://github.com/amsyary/flutter_firebase_chat_core.git
+    git:
+      url: https://github.com/amsyary/flutter_firebase_chat_core.git
+      ref: 2711a40
   jiffy: ^5.0.0
   flutter_local_notifications: ^9.4.0
   dropdown_search: ^2.0.1
