--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ version: 1.0.18+4
 publish_to: none
 description: A new Flutter project.
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=2.17.1 <3.0.0"
 
 dependencies:
   cupertino_icons: ^1.0.2
@@ -55,10 +55,13 @@ dependencies:
   agora_rtc_engine: ^5.3.0
   permission_handler: ^9.2.0
   image_cropper: ^2.0.3
+  currency_text_input_formatter: ^2.1.8
 
 dev_dependencies:
   flutter_lints: ^1.0.0
   lints: 1.0.1
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.9.2
