--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: hallo_doctor_doctor_app
-version: 1.0.19+5
+version: 1.1.1+6
 publish_to: none
 description: A new Flutter project.
 environment:
@@ -38,17 +38,18 @@ dependencies:
   firebase_messaging: ^14.2.1
   flutter_dotenv: ^5.0.2
   flutter_chat_ui:
-    git: https://github.com/amsyary/flutter_chat_ui.git
+    git:
+      url: https://github.com/amsyary/flutter_chat_ui.git
+      ref: aed67b2
   uuid: ^3.0.6
-  file_picker: ^4.5.0
+  file_picker: ^5.1.0
   mime: ^1.0.1
-  open_file: ^3.2.1
   flutter_firebase_chat_core:
     git:
       url: https://github.com/amsyary/flutter_firebase_chat_core.git
-      ref: 2711a40
+      ref: a7fb781779957e93cf2063b64c7b6f4fda1eabb1
   jiffy: ^5.0.0
-  flutter_local_notifications: ^9.4.0
+  flutter_local_notifications: ^13.0.0
   dropdown_search: ^2.0.1
   json_serializable: ^6.1.5
   json_annotation: ^4.4.0
@@ -56,6 +57,7 @@ dependencies:
   permission_handler: ^9.2.0
   image_cropper: ^2.0.3
   currency_text_input_formatter: ^2.1.8
+  open_file_plus: ^3.4.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
