--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: hallo_doctor_doctor_app
-version: 1.1.1+6
+version: 1.1.2+7
 publish_to: none
 description: A new Flutter project.
 environment:
-  sdk: ">=2.17.1 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   cupertino_icons: ^1.0.2
@@ -14,23 +14,23 @@ dependencies:
   flutter_signin_button: ^2.0.0
   flutter_easyloading: ^3.0.3
   fluttertoast: ^8.0.8
-  google_fonts: ^2.1.0
+  google_fonts: ^5.1.0
   image_picker: ^0.8.4+4
   path_provider: ^2.0.7
   flutter_svg: ^1.0.1
   get_storage: ^2.0.3
   table_calendar: ^3.0.3
-  flutter_form_builder: 7.0.0
-  form_builder_validators: ^7.2.0
+  flutter_form_builder: ^9.1.0
+  form_builder_validators: ^9.0.0
   cached_network_image: ^3.2.0
   string_validator: ^0.3.0
   lottie: ^1.2.1
   rounded_loading_button: ^2.0.9
   date_count_down:
   flutter_rating_bar: ^4.0.1
-  package_info_plus: ^1.3.0
+  package_info_plus: ^4.1.0
   firebase_core: ^2.3.0
-  firebase_auth: ^4.1.0
+  firebase_auth: ^4.7.3
   cloud_firestore: ^4.1.0
   cloud_functions: ^4.0.7
   firebase_storage: ^11.0.10
@@ -40,22 +40,21 @@ dependencies:
   flutter_chat_ui:
     git:
       url: https://github.com/amsyary/flutter_chat_ui.git
-      ref: aed67b2
+      ref: 21b0aae
   uuid: ^3.0.6
   file_picker: ^5.1.0
   mime: ^1.0.1
   flutter_firebase_chat_core:
     git:
       url: https://github.com/amsyary/flutter_firebase_chat_core.git
-      ref: a7fb781779957e93cf2063b64c7b6f4fda1eabb1
   jiffy: ^5.0.0
   flutter_local_notifications: ^13.0.0
-  dropdown_search: ^2.0.1
+  dropdown_search: ^5.0.6
   json_serializable: ^6.1.5
   json_annotation: ^4.4.0
   agora_rtc_engine: ^5.3.0
   permission_handler: ^9.2.0
-  image_cropper: ^2.0.3
+  image_cropper: ^5.0.0
   currency_text_input_formatter: ^2.1.8
   open_file_plus: ^3.4.0
 
