--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: hallo_doctor_doctor_app
-version: 1.1.2+7
+version: 1.1.3+8
 publish_to: none
 description: A new Flutter project.
 environment:
@@ -57,6 +57,7 @@ dependencies:
   image_cropper: ^5.0.0
   currency_text_input_formatter: ^2.1.8
   open_file_plus: ^3.4.0
+  freezed_annotation: ^2.4.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
@@ -67,7 +68,8 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.9.2
   change_app_package_name: ^1.0.0
-  build_runner: ^2.1.8
+  build_runner: ^2.1.11
+  freezed: ^2.4.3
 
 flutter:
   uses-material-design: true
