--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dancingwhale.hallo_doctor_doctor_app">
+    package="com.dancingwhale.hallo_doctor_doctor_app" 
+    xmlns:tools="http://schemas.android.com/tools">
    <application
         android:label="Doctor App"
         android:name="${applicationName}"
         android:usesCleartextTraffic="true"
+        tools:replace="android:label"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
