--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   currency_text_input_formatter: ^2.1.8
   open_file_plus: ^3.4.0
   freezed_annotation: ^2.4.1
+  external_app_launcher: ^3.1.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
