--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   freezed_annotation: ^2.4.1
   external_app_launcher: ^3.1.0
 
+dependency_overrides:
+  intl: 0.19.0
+
 dev_dependencies:
   flutter_lints: ^1.0.0
   lints: 1.0.1
