--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,7 +30,7 @@ if (keystorePropertiesFile.exists()) {
        keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
    }
 android {
-    compileSdkVersion 33
+    compileSdkVersion 34
     testOptions {
         execution "ANDROIDX_TEST_ORCHESTRATOR"
     }
@@ -63,6 +63,9 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.release
+        }
+        debug{
+            minifyEnabled false
         }
     }
 }
