--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: hallo_doctor_doctor_app
-version: 1.2.3+13
+version: 1.2.4+14
 publish_to: none
 description: A new Flutter project.
 environment:
@@ -24,7 +24,7 @@ dependencies:
   form_builder_validators: ^9.0.0
   cached_network_image: ^3.3.0
   string_validator: ^0.3.0
-  lottie: ^1.2.1
+  lottie: ^3.1.2
   date_count_down:
   flutter_rating_bar: ^4.0.1
   package_info_plus: ^4.1.0
@@ -46,7 +46,7 @@ dependencies:
   file_picker: ^5.1.0
   mime: ^1.0.1
   jiffy: ^5.0.0
-  flutter_local_notifications: ^17.1.2
+  flutter_local_notifications: ^17.2.2
   dropdown_search: ^5.0.6
   json_serializable: ^6.1.5
   json_annotation: ^4.4.0
@@ -60,6 +60,8 @@ dependencies:
 
 dependency_overrides:
   intl: 0.19.0
+  win32: ^5.5.4
+  archive: ^3.6.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
