fix to be able to build to apk

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,6 +30,8 @@ if (keystorePropertiesFile.exists()) {
        keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
    }
 android {
+    def buildConfig = rootProject.extensions.getByName("ext")
+    compileSdk buildConfig.compileSdkVersion
     compileSdkVersion 34
     testOptions {
         execution "ANDROIDX_TEST_ORCHESTRATOR"
@@ -45,7 +47,7 @@ android {
         testInstrumentationRunnerArguments clearPackageData: "true"
         applicationId "com.dancingwhale.hallo_doctor_doctor_app"
         minSdkVersion 24
-        targetSdkVersion 34
+        targetSdkVersion buildConfig.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
