--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,11 @@
 buildscript {
     ext.kotlin_version = '1.9.0'
+    ext {
+    compileSdkVersion   = 34
+    targetSdkVersion    = 34
+    appCompatVersion    = "1.7.0"
+    }
+    subprojects { afterEvaluate { android { compileSdkVersion 34 } } }
     repositories {
         google()
         mavenCentral()
@@ -16,6 +22,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+       
     }
 }
 
@@ -27,6 +34,9 @@ subprojects {
     project.evaluationDependsOn(':app')
 }
 
+
+
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
