--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,20 +28,20 @@ dependencies:
   date_count_down:
   flutter_rating_bar: ^4.0.1
   package_info_plus: ^4.1.0
-  firebase_core: ^2.3.0
-  firebase_auth: ^4.7.3
-  cloud_firestore: ^4.1.0
-  cloud_functions: ^4.0.7
-  firebase_storage: ^11.0.10
-  firebase_database: ^10.0.9
-  firebase_messaging: ^14.2.1
+  firebase_core: ^3.3.0
+  firebase_auth: ^5.1.4
+  cloud_firestore: ^5.2.1
+  cloud_functions: ^5.0.4
+  firebase_storage: ^12.1.3
+  firebase_database: ^11.0.4
+  firebase_messaging: ^15.0.4
   flutter_dotenv: ^5.0.2
-  flutter_chat_ui:
-    git:
-      url: https://github.com/amsyary/flutter_chat_ui.git
   # flutter_chat_ui:
-  #   path: ../../DancingWhale/Migrasi Error Package Change Name/flutter_chat_ui
-  #   # path: ../flutter_chat_ui
+  #   git:
+  #     url: https://github.com/amsyary/flutter_chat_ui.git
+  flutter_chat_ui:
+    path: ../../DancingWhale/Migrasi Error Package Change Name/flutter_chat_ui
+    # path: ../flutter_chat_ui
   uuid: ^3.0.6
   file_picker: ^5.1.0
   mime: ^1.0.1
