--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,10 +42,11 @@ android {
     }
 
     defaultConfig {
+        multiDexEnabled true
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         testInstrumentationRunner "pl.leancode.patrol.PatrolJUnitRunner"
         testInstrumentationRunnerArguments clearPackageData: "true"
-        applicationId "com.dancingwhale.hallo_doctor_doctor_app"
+        applicationId "com.checkupdoctor.ztone"
         minSdkVersion 24
         targetSdkVersion buildConfig.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
@@ -77,4 +78,7 @@ flutter {
 }
 dependencies {
       androidTestUtil "androidx.test:orchestrator:1.4.2"
+      coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+      implementation 'androidx.window:window:1.0.0'
+      implementation 'androidx.window:window-java:1.0.0'
 }
