--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   open_file_plus: ^3.4.0
   freezed_annotation: ^2.4.1
   external_app_launcher: ^3.1.0
+  change_app_package_name: ^1.5.0
+  rename_app: ^1.6.2
+  flutter_native_splash: ^2.2.16
 
 dependency_overrides:
   intl: 0.19.0
@@ -71,7 +74,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.9.2
-  change_app_package_name: ^1.0.0
   build_runner: ^2.1.11
   freezed: ^2.4.3
   patrol: ^3.7.2
@@ -88,3 +90,14 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/icons/ic_launcher.png"
+
+
+
+  flutter_native_splash:
+    color: "#ffffff"
+    image: assets/icons/ic_launcher.png
+    android_gravity: fill
+    android_12:
+      image: assets/icons/ic_launcher.png
+      icon_background_color: "#ffffff"
+      android_gravity: fill
