--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: hallo_doctor_doctor_app
-version: 1.2.4+14
+version: 1.0.0
 publish_to: none
 description: A new Flutter project.
 environment:
@@ -10,7 +10,7 @@ dependencies:
   get: 4.6.6
   flutter:
     sdk: flutter
-  google_sign_in: ^5.1.1
+  google_sign_in: ^7.0.0
   flutter_signin_button: ^2.0.0
   flutter_easyloading: ^3.0.3
   fluttertoast: ^8.0.8
@@ -33,7 +33,7 @@ dependencies:
   cloud_firestore: ^5.2.1
   cloud_functions: ^5.0.4
   firebase_storage: ^12.1.3
-  firebase_database: ^11.0.4
+  firebase_database: ^11.3.7
   firebase_messaging: ^15.0.4
   flutter_dotenv: ^5.0.2
   flutter_chat_ui:
@@ -43,7 +43,7 @@ dependencies:
   #   path: ../../DancingWhale/Migrasi Error Package Change Name/flutter_chat_ui
   #   # path: ../flutter_chat_ui
   uuid: ^3.0.6
-  file_picker: ^5.1.0
+  file_picker: ^10.2.0
   mime: ^1.0.1
   jiffy: ^5.0.0
   flutter_local_notifications: ^17.2.2
@@ -60,6 +60,7 @@ dependencies:
   change_app_package_name: ^1.5.0
   rename_app: ^1.6.2
   flutter_native_splash: ^2.2.16
+  url_launcher_ios: ^6.3.3
 
 dependency_overrides:
   intl: 0.19.0
